unpackaged/main/default/objects/Additional_Tax_Free_Form__c/Additional_Tax_Free_Form__c.object-meta.xml
<CustomObject>
    <label>Additional Tax Free Form</label>
    <nameField>
        <displayFormat>ATF-{0000000}</displayFormat>
        <label>Additional  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Tax Free Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>