unpackaged/main/default/objects/Additional_Tax_Free_Form__c/fields/Account_Shop__c.field-meta.xml
<CustomField>
    <fullName>Account_Shop__c</fullName>
    <formula>Tax_Free_Form__r.Account_Shop__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Shop</label>
    <type>Text</type>
</CustomField>