unpackaged/main/default/objects/Additional_Tax_Free_Form__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Additional Tax Free Forms</relationshipLabel>
    <relationshipName>Additional_Tax_Free_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>