unpackaged/main/default/objects/Additional_Tax_Free_Form__c/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <formula>TEXT(Case__r.Case_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Reason</label>
    <type>Text</type>
</CustomField>