unpackaged/main/default/objects/Additional_Tax_Free_Form__c/fields/Date_Time_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Opened__c</fullName>
    <formula>Case__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Opened</label>
    <type>DateTime</type>
</CustomField>