unpackaged/main/default/objects/Additional_Tax_Free_Form__c/fields/Last_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Status__c</fullName>
    <formula>Tax_Free_Form__r.Latest_Payment_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Payment Status</label>
    <type>Text</type>
</CustomField>