unpackaged/main/default/objects/Additional_Tax_Free_Form__c/fields/Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount__c</fullName>
    <formula>Tax_Free_Form__r.Refund_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>