unpackaged/main/default/objects/Additional_Tax_Free_Form__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <formula>TEXT(Case__r.Resolution__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution</label>
    <type>Text</type>
</CustomField>