unpackaged/main/default/objects/Additional_Tax_Free_Form__c/fields/Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Amount__c</fullName>
    <formula>Tax_Free_Form__r.Sales_Amount_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>