unpackaged/main/default/objects/Additional_Tax_Free_Form__c/fields/Tax_Free_Form__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Free Form</label>
    <referenceTo>Tax_Free_Form__c</referenceTo>
    <relationshipLabel>Additional Cases</relationshipLabel>
    <relationshipName>Additional_Tax_Free_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>