unpackaged/main/default/objects/Additional_Tax_Free_Form__c/fields/Tax_Free_Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Form_Id__c</fullName>
    <formula>Tax_Free_Form__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Free Form Id</label>
    <type>Text</type>
</CustomField>