unpackaged/main/default/objects/Additional_Tax_Free_Form__c/fields/Tourist__c.field-meta.xml
<CustomField>
    <fullName>Tourist__c</fullName>
    <formula>Tax_Free_Form__r.Tourist_First_Name__c  + &quot; &quot; +  Tax_Free_Form__r.Tourist_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tourist</label>
    <type>Text</type>
</CustomField>