unpackaged/main/default/objects/Additional_Tax_Free_Form__c/fields/Tourist_Planet_Pass_Id__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Planet_Pass_Id__c</fullName>
    <formula>Tax_Free_Form__r.Tourist_Premier_Pass_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tourist Planet Pass Id</label>
    <type>Text</type>
</CustomField>